style.css
/* Colors
Black:         #000000
Gold:          #D5B032
Silver:        #C0C0C0
Bronze:        #CD7F32
Light Green:   #7BE600
Dark Green:    #2D630D
*/
:root {
  --col-bg-main: #261441;
}
html {
  background-color: var(--col-bg-main);
  color: white;
}
.content-skip {
  position: fixed;
  bottom: 12px;
  right: 12px;
  color: white;
  text-decoration: none;
  z-index: 10;
}
@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
body, button {
  margin: 0px;
  overflow-x: hidden;
  font-family: 'Sora', sans-serif;
  width: 100%;
}
p{
  margin: 0px 10px;
  font-size: 20px;
}
@media only screen and (max-width: 700px){
  h1 {
    font-size: 25px!important;
  }
  #countdown{
    font-size: 25px!important;
  }
  #countdown2{
    font-size: 25px!important;
  }
}
#goToTop{
	border: none;
	font-size: 20px;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 10;
	color: #000;
	outline: 0;
  position: relative;
  display: inline-block;
  border-radius: 10px;
  transition: box-shadow 0.5s ease-in-out, border-color 0.5s ease-in-out;
	background-color: #D5B032;
	width: 50px;
	height: 50px;

}
#goToTop:hover{
	cursor: pointer;
	background-color: #D5B032;
    color: #000;
    box-shadow: 0 0 5px #D5B032,
                0 0 10px #D5B032,
                0 0 15px #D5B032,
                0 0 20px #D5B032;
}
#black-square{
	opacity: 1;
	position: fixed;
	animation-fill-mode:forwards;
	z-index: 20;
	border: none;
	background-color: rgba(0,0,0,.5);
	height: 70px;
	width: 70px;
	right: 0;
	bottom: 0;
	border-radius: 10px;
}
.button {
	text-decoration: none;
    outline: 0;
    position: relative;
    display: inline-block;
    padding: 10px 20px;
    font-size: 18px;
    overflow: hidden;
    cursor: pointer;
    border: 2px solid #D5B032;
    background-color: #D5B032;
    color: #000;
    font-weight: 600;
    transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out;
	border-radius: 10px;
	margin: 25px 0px 0px 0px;
}
.button:hover {
    background-color: #D5B032;
	border-color: #D5B032;
    color: #000;
    box-shadow: 0 0 2px #D5B032,
                0 0 5px #D5B032,
                0 0 8px #D5B032,
                0 0 15px #D5B032;
}
.padder{
  height: 70px;
}
.banner-button{
	position: absolute;
	cursor: pointer;
	transform: translate(-50%, -100px);
}
@media only screen and (max-width: 700px){
	.banner-button{
		position: absolute;
		cursor: pointer;
		transform: translate(-50%, -60px);
	}
}
footer {
  width: 100%;
	height: 52.5vw;
	display: flex;
	align-items: flex-end;
  position: relative;
  z-index: 50;
  box-sizing: border-box;
}
footer::before {
  content: ' ';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 64.7vw;
  background-image: url('/images/cave_background/bottom.png');
  background-position: bottom;
  background-size: 100vw;
}
footer .flex {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  z-index: 1;
  height: min(15vw, 100px)  ;
  color: white;
  padding: 0 min(40px, 4vw);
  box-sizing: border-box;
}
footer .flex a {
  color: white;
}
#countdown{
	font-size: 50px;
	height: 50px;
}
#countdown2{
	font-size: 50px;
	height: 50px;
}
.centered-popout{
	border-radius: 10px;
	width: 90vw;
	margin-top: 30px;
	padding: 20px;
	box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
	-webkit-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
	background-color: rgba(255,255,255,0.8)
}
hr{
	width: 100%;
  border: 0;
  height: 2px;
  background-image: linear-gradient(to right, #fff0, #ffffffb0, #fff0);
	margin-bottom: 40px;
	margin-top: 40px;
}
.section{
	padding: 0px 8px;
  min-height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.row {
   text-align:center;
   display: flex;
   width: 100%;
   flex-wrap: wrap;
   align-items: center;
   justify-content:center;
}
@media only screen and (max-width: 700px){
	.centered-popout{
		width: 80vw;
	}
}

.names-container h3{
	margin: 10px 0px;
	font-size: 25px;
}
.names-container h4{
  margin: 10px 0px;
}
h3{
	margin-top:22px;
	font-size: 25px;
}
.glow{
    border: none;
    outline: none;
    color: #000;
    cursor: pointer;
    position: relative;
    z-index: 0;
    border-radius: 10px;
}
.glow:before {
  content: '';
  background: linear-gradient(45deg, #d5b032, #C0C0C0, #cd7f32);
  position: absolute;
  top: -2px;
  left:-2px;
  background-size: 400%;
  z-index: -1;
  filter: blur(5px);
  width: calc(100% + 6px);
  height: calc(100% + 6px);
  animation: glowing 20s linear infinite;
  transition: opacity .3s ease-in-out;
  border-radius: 10px;
	opacity: 1;
}
.glow:after {
    z-index: -1;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: #fff;
    left: 0;
    top: 0;
    border-radius: 10px;
}
@keyframes glowing {
    0% { background-position: 0 0; }
    50% { background-position: 400% 0; }
    100% { background-position: 0 0; }
}
.sponsor{
  width: 200px;
  height: 130px;
  border-radius: 5px;
  height: 100%;
  object-fit: contain;
}
.item {
  width: 220px!important;
  height: 130px!important;
  margin: 25px 50px;
  border-radius: 20px;
}

.description {
	font-size: 20px;
	padding: 16px 3%;
}
.flex{
	display: flex;
}
.names-container > div {
	padding: 2%;
	text-align: center;
	width: 21%;
}
@media only screen and (max-width: 850px){
	.names-container > div {
		width: 46%;
	}
}
@media only screen and (max-width: 500px){
	.names-container > div {
		width: 96%;
	}
}
.names-container{
	max-width: 100vw;
	flex-wrap: wrap;
	justify-content:center;
}
h4{
	color: #666;
	padding: 0px;
	margin: 0px;
}
.person{
	width: 180px;
  height: 180px;
  object-fit: cover;
  object-position: 0% 0%;
}
.link{
	text-decoration:none;
	color: black;
	transition: all 0.3s ease;
}
.link:hover{
	transform: scale(1.04);
	cursor: pointer;
}
/* ... */

